--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                             <path d="m14 11v2" stroke="black" stroke-linecap="round" stroke-width="1.5"></path>
                             <path d="m16.5 8.5v6.814" stroke="black" stroke-linecap="round" stroke-width="1.5">
                             </path>
-
                         </g>
                     </svg>
                     playIT
@@ -87,10 +86,10 @@
                 <div id="library">
                 </div>
                 <div id="footer">
-                    <div><a href="">Created by " KAAKU "</a></div>
-                    <div><a href="">GitHub</a></div>
-                    <div><a href="" target="_blank">Lin</a></div>
-                    <div><a href="https://open.spotify.com/" target="_blank">inspired by Spotify</a></div>
+                    <span><a href="">Created by " KAAKU "</a></span>
+                    <span><a href="https://github.com/Developerkaku" target="_blank">GitHub</a></span>
+                    <span><a href="https://www.linkedin.com/in/karthik-s-4b6987297" target="_blank">Lin</a></span>
+                    <span><a href="https://open.spotify.com/" target="_blank">inspired by Spotify</a></span>
                     <!-- <div><span>Spotify</span></div>
                     <div><span>inspired by Spotify</span></div> -->
                 </div>
