--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </svg>
             </button>
             <div class="menu">
-                <div class="logo">
+                <div class="logo" onclick="window.open('https://developerkaku.github.io/spotify-look-alike/', '_blank');">
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                         <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -41,7 +41,7 @@
                     </svg>
                     playIT
                 </div>
-                <div class="home">
+                <div class="home" onclick="a();">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
                         fill="none">
                         <path
@@ -53,7 +53,7 @@
                     </svg>
                     Home
                 </div>
-                <div class="search">
+                <div class="search" onclick="a();">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
                         fill="none">
                         <path d="M17.5 17.5L22 22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
